--- a/src/Globle.module.css
+++ b/src/Globle.module.css
@@ -50,5 +50,24 @@ header {
 
 /* css for App.js */
 .main-container {
-    margin-top: 100px;
+    margin-top: 74px;
+}
+
+/* scrollbar */
+::-webkit-scrollbar {
+    width: 0.5rem;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 1rem;
+    background: var(--text-color);
+    transition: all 0.5s ease-in-out;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--main-color);
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
 }
