--- a/src/components/slider/Slider.css
+++ b/src/components/slider/Slider.css
@@ -81,6 +81,9 @@
 }
 
 .swiper-pagination .swiper-pagination-bullet {
+    height: 12px;
+    width: 12px;
+    cursor: pointer;
     filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
 }
 
