--- a/src/components/slider/Slider.css
+++ b/src/components/slider/Slider.css
@@ -4,20 +4,6 @@
     position: relative;
 }
 
-@media (max-width: 1280px) {
-    .swiper_container {
-        padding: 14px 2%;
-        transition: 0px 20px;
-    }
-}
-
-@media (max-width: 500px) {
-    .swiper_container {
-        padding: 4px 1%;
-        transition: 0px 20px;
-    }
-}
-
 .swiper-slide {
     width: 28rem;
     height: 24rem;
@@ -47,17 +33,30 @@
     cursor: pointer;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 1280px) {
     .swiper_container {
-        height: 27rem;
+        padding: 14px 2%;
+        transition: 0px 20px;
+    }
+}
+
+@media (max-width: 1000px) {
+    .swiper_container {
+        height: 25rem;
+        padding: 17px 1%;
+        transition: 0px 20px;
     }
     .swiper-slide {
-        width: 24rem !important;
-        height: 24rem !important;
+        width: 20rem !important;
+        height: 20rem !important;
     }
     .swiper-slide .slide-item {
-        width: 24rem;
-        height: 24rem;
+        width: 20rem;
+        height: 20rem;
+    }
+
+    .swiper-slide .slide-item button {
+        margin-top: 11rem;
     }
 }
 
