--- a/src/Globle.module.css
+++ b/src/Globle.module.css
@@ -19,6 +19,28 @@ body {
     color: var(--text-color);
 }
 
+h1,
+h2,
+h3 {
+    font-weight: 900;
+}
+
+p {
+    color: var(--bg-color);
+    font-weight: 600;
+}
+
+button {
+    width: 100px;
+    height: 33px;
+    border: none;
+    border-radius: 10px;
+    background-color: var(--main-color);
+    font-size: 1.1rem;
+    color: var(--text-color);
+    cursor: pointer;
+}
+
 /* css for header component/header/header.js */
 header {
     position: fixed;
@@ -29,7 +51,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: transparent;
+    background-color: #161617;
     padding: 20px 12%;
     transition: all 0.5s ease;
 }
