--- a/src/Globle.module.css
+++ b/src/Globle.module.css
@@ -2,6 +2,11 @@
     --bg-color: #222327;
     --text-color: #fff;
     --main-color: #29fd53;
+
+    /* color */
+    --black-color: #000;
+
+    --margin-top-home-page: 40px;
 }
 
 * {
@@ -51,7 +56,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #161617;
+    background-color: var(--bg-color);
     padding: 20px 12%;
     transition: all 0.5s ease;
 }
