--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -56,6 +56,10 @@
     display: none;
 }
 
+.main button {
+    margin-right: 5px;
+}
+
 /* FLEXIBLE FOR MOBILE AND TABLET */
 @media (max-width: 1280px) {
     .menu a {
