--- a/src/Globle.module.css
+++ b/src/Globle.module.css
@@ -3,6 +3,11 @@
     --text-color: #fff;
     --main-color: #29fd53;
 
+    --body-back-product: #ffeaed;
+    --section-back-product: #f7f6f9;
+    --text-color-product: #1d2741;
+    --star-color-product: #f67034;
+
     /* color */
     --black-color: #000;
 
@@ -12,8 +17,8 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-        'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+        Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
