--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,18 +1,17 @@
 .footer {
-    margin-top: 7%;
     padding: 6% 0 2%;
-    background-color: #fff;
+    background-color: var(--white);
 }
 
 .social {
     text-align: center;
     padding-bottom: 25px;
-    color: #4b4c4d;
+    color: var(--gray-dark);
 }
 .social a {
-    font-size: 29px;
+    font-size: calc(var(--font-size-tag-a) + 5px);
     color: inherit;
-    border: 1px solid #ccc;
+    border: 1px solid var(--gray-dark);
     width: 40px;
     height: 40px;
     line-height: 38px;
@@ -28,7 +27,7 @@
 }
 
 .list {
-    font-size: 1.3rem;
+    font-size: var(--font-size-tag-a);
     line-height: 1.6;
     text-align: center;
 }
@@ -39,7 +38,7 @@
 }
 
 .list a {
-    color: #4b4c4d;
+    color: var(--gray-dark);
     opacity: 0.8;
 }
 
@@ -50,7 +49,7 @@
 .copyright {
     margin-top: 3%;
     text-align: center;
-    font-size: 1.3rem;
+    font-size: var(--font-size-tag-p);
     color: #4b4c4d;
     opacity: 0.4;
 }
