--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,124 +1,148 @@
-/* CSS LOGO */
-.logo {
+.header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 70px;
+    margin: 0 auto;
+    padding: 0 200px;
+    background-color: var(--white);
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    transition: 0.2s;
+    z-index: 998;
 }
 
-.logo .logo-icon {
-    color: var(--main-color);
-    font-size: 28px;
-    margin-right: 3px;
+.logo a {
+    color: var(--gray-dark);
+    font-size: var(--font-size-header-logo);
 }
 
-.logo span {
-    color: var(--text-color);
-    font-size: 1.7rem;
-    font-weight: 600;
-}
-
-/* CSS MAIN ABOUT LOGIN, REGISTER AND BUTTON MENU */
-.main {
-    display: flex;
-    align-items: center;
-}
-
-.main a {
-    margin-right: 25px;
-    margin-left: 10px;
-    color: var(--text-color);
-    font-size: 1.1rem;
-    font-weight: 500;
-    transition: all 0.5s ease;
-}
-
-.main a:hover {
-    color: var(--main-color);
-}
-
-.user {
-    display: flex;
-    align-items: center;
-}
-
-.user .user-icon {
-    color: var(--main-color);
-    font-size: 28px;
-    margin-right: 7px;
-}
-
-.menu-icon {
-    align-items: center;
-    text-align: center;
-    width: 35px;
-    font-size: 35px;
-    cursor: pointer;
-    z-index: 1001;
+.nav .logo {
     display: none;
 }
 
-.main button {
+.nav ul {
+    display: flex;
+}
+
+.nav ul li a {
+    display: block;
+    margin: 0 2px;
+    padding: 8px 18px;
+    color: var(--black);
+    font-size: var(--font-size-header-a);
+    font-weight: calc(var(--font-weight-tag-a) + 300);
+    transition: 0.2s;
+    border-radius: 30px;
+}
+
+.nav ul li a:active {
+    background-color: var(--blue);
+    color: var(--white);
+}
+
+.nav ul li a:hover,
+.button-logout:hover {
+    background-color: var(--gray-dark);
+    color: var(--white);
+}
+
+.button-logout {
+    font-size: var(--font-size-header-a);
+    font-weight: var(--font-weight-tag-a);
+    margin-left: 5px;
+    padding: 8px 18px;
+    border: none;
+    border-radius: 30px;
+}
+
+.icon {
     margin-right: 5px;
 }
 
-/* FLEXIBLE FOR MOBILE AND TABLET */
-@media (max-width: 1280px) {
-    .menu a {
-        padding: 5px 0;
-        margin: 0 20px;
+.hamburger {
+    display: none;
+    height: fit-content;
+    cursor: pointer;
+    padding: 3px 8px;
+    border-radius: 5px;
+    transition: 0.2s;
+    font-size: 1.8rem;
+    color: var(--gray);
+}
+
+.hamburger:hover {
+    background-color: var(--gray);
+    color: var(--white);
+}
+
+@media only screen and (max-width: 1600px) {
+    .header {
+        padding: 0 150px;
     }
 }
 
-@media (max-width: 1090px) {
-    .navbar {
-        display: none;
+@media only screen and (max-width: 1300px) {
+    .header {
+        padding: 0 100px;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    .header {
+        padding: 0 75px;
+    }
+}
+
+@media only screen and (max-width: 1100px) {
+    .header {
+        width: 100%;
+        padding: 0 50px;
     }
 
-    .menu-icon {
+    .nav {
+        position: absolute;
+        left: -300px;
+        top: 0;
+        z-index: 999;
+        width: 280px;
+        height: 100vh;
+        background-color: var(--white);
+        transition: 0.2s;
+        box-shadow: 2px 0 20px 0 rgba(0, 0, 0, 0.02);
+    }
+
+    .nav.active {
+        left: 0;
+    }
+
+    .nav .logo {
         display: block;
-    }
-
-    .menu {
-        width: 270px;
-        height: auto;
-        background-color: var(--main-color);
+        height: 70px;
         display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        border-radius: 10px;
-        transition: all 0.5s ease;
+        align-items: center;
+        margin-left: 30px;
     }
 
-    .menu a {
+    .nav ul {
         display: block;
-        margin: 12px 0;
-        padding: 0px 25px;
-        transition: all 0.5s ease;
+        padding: 0 20px;
+        margin-top: 30px;
     }
 
-    .menu a:hover {
-        color: var(--text-color);
-        transform: translateX(10px);
+    .nav ul li a {
+        margin-bottom: 5px;
+        padding: 10px 15px;
+        border-radius: 5px;
     }
 
-    .menu a.active {
-        color: var(--text-color);
-    }
-}
-
-/* FELXIBLE USER ICON FOR MOBILE */
-@media (max-width: 500px) {
-    .main a {
-        margin-right: 10px;
-        margin-left: 5px;
-        color: var(--text-color);
-        font-size: 1rem;
-        font-weight: 500;
-        transition: all 0.5s ease;
+    .button-logout {
+        width: 100%;
+        border-radius: 5px;
     }
 
-    .user .user-icon {
-        color: var(--main-color);
-        font-size: 20px;
-        margin-right: 7px;
+    .hamburger {
+        display: block;
     }
 }
