--- a/src/components/product/Product.module.css
+++ b/src/components/product/Product.module.css
@@ -1,58 +1,54 @@
 .product {
     position: relative;
-    background-color: var(--section-back-product);
-    width: 20%;
-    height: 400px;
+    background-color: var(--white);
+    width: 300px;
+    height: 450px;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     padding: 20px 20px 40px;
     border-radius: 10px;
-    transition: 0.3s;
-}
-
-.product:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-}
-
-.product p {
-    font-size: 1.1rem;
-    line-height: 25px;
+    transition: 0.2s;
 }
 
 .image {
     width: 100%;
-    height: 60%;
+    height: 45%;
     display: grid;
     place-items: center;
 }
 
 .image img {
     width: 100%;
+    height: 100%;
 }
 
 .name-price {
+    margin-top: 20px;
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
-.name-price h3 {
-    font-size: 1.3rem;
+.name-price a {
+    font-size: var(--font-size-heading-three);
     text-transform: capitalize;
-    color: var(--text-color-product);
+    color: var(--gray-dark);
 }
 
 .name-price span {
     font-size: 1.2rem;
-    color: var(--star-color-product);
+    color: var(--red);
 }
 
-.star {
-    font-size: 1.3rem;
-    color: var(--star-color-product);
+.information {
+    margin-top: 10px;
+}
+
+.product p {
+    font-size: 1.2rem;
+    text-transform: capitalize;
+    color: var(--gray);
 }
 
 .buy {
@@ -62,14 +58,14 @@
 }
 
 .buy button {
-    border-radius: 7px;
-    background-color: var(--text-color-product);
-    color: var(--section-back-product);
-    font-size: 1.1rem;
-    text-transform: capitalize;
-    transition: 0.3s;
+    padding: 10px 20px;
+    border: none;
+    background-color: var(--gray);
+    color: var(--white);
+    font-size: 1.2rem;
+    cursor: pointer;
 }
 
 .buy button:hover {
-    transform: scale(1.1);
+    background-color: var(--gray-dark);
 }
