--- a/src/pages/products/Products.module.css
+++ b/src/pages/products/Products.module.css
@@ -1,9 +1,32 @@
-.products {
-    margin-top: 100px;
-    width: 100%;
-    height: auto;
+.container {
+    margin: 100px 0;
+    padding: 0 5%;
     display: flex;
+    flex-direction: row;
     justify-content: space-evenly;
+}
+
+.products {
+    width: 80%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 20px;
+}
+
+.dashbroad {
+    width: 20%;
+}
+
+@media only screen and (max-width: 1100px) {
+    .container {
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .products {
+        margin-top: 5%;
+        width: 100%;
+    }
 }
