--- a/src/pages/register/Register.module.css
+++ b/src/pages/register/Register.module.css
@@ -1,78 +1,85 @@
 .container {
-    padding-top: 5%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin: auto;
+    display: grid;
+    place-items: center;
+    height: 100vh;
+    background-color: transparent;
 }
 
-.center {
-    width: 50%;
-    height: auto;
-    background-color: white;
-    border-radius: 20px;
+.wrapper {
+    width: 380px;
+    background-color: var(--white);
 }
 
-.center h1 {
+.wrapper .title {
+    line-height: 80px;
+    background-color: var(--gray);
+    font-size: var(--font-size-heading-one);
+    font-weight: var(--font-weight-heading-one);
     text-align: center;
-    padding: 20px 0 20px 0;
-    border-bottom: 1px solid silver;
-    color: var(--bg-color);
+    color: var(--white);
 }
 
-.center form {
-    padding: 20px 40px;
+.wrapper form {
+    padding: 30px 20px 40px 20px;
 }
 
-form .txt-field {
+.wrapper form .row {
+    height: 45px;
+    margin-bottom: 25px;
     position: relative;
-    border-bottom: 2px solid #adadad;
-    margin: 30px 0;
 }
 
-.txt-field input {
+.wrapper form .row span {
+    color: var(--red);
+    font-weight: 600;
+}
+
+.wrapper form .row .icon {
+    width: 47px;
+    height: 100%;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--white);
+    font-size: var(--font-size-heading-four);
+    background-color: var(--gray);
+}
+
+.wrapper form .row input {
+    padding-left: 60px;
     width: 100%;
-    padding: 0 5px;
-    height: 40px;
-    font-size: 16px;
-    border: none;
-    background: none;
+    height: 100%;
     outline: none;
+    border: 1px solid var(--gray);
+    font-size: var(--font-size-heading-four);
 }
 
-.txt-field label {
-    color: #adadad;
-    font-size: 16px;
-    pointer-events: none;
+.row button {
+    width: 100%;
+    height: 47px;
+    border: none;
+    color: var(--white);
+    font-size: var(--font-size-heading-four);
+    background-color: var(--gray);
 }
 
-.txt-field span {
-    color: red;
+.row button:hover {
+    background-color: var(--gray-dark);
 }
 
-.center form button {
-    width: 30%;
-    margin-bottom: 20px;
+.row .signup-link {
+    margin-top: 10px;
+    display: flex;
+    font-size: var(--font-size-heading-four);
+    gap: 10px;
 }
 
-.signup-link {
-    color: var(--bg-color);
-}
-
-@media (max-width: 600px) {
-    .center {
-        width: 100%;
-        background: transparent;
-    }
-
-    .center h1 {
-        color: white;
-    }
-
-    .signup-link {
-        color: white;
-    }
-
-    .txt-field input {
-        color: white;
+@media only screen and (max-height: 500px) {
+    .container {
+        margin-top: 80px;
+        margin-bottom: 50px;
+        height: auto;
     }
 }
