--- a/src/pages/profile/Profile.module.css
+++ b/src/pages/profile/Profile.module.css
@@ -1,68 +1,19 @@
 .container {
-    padding: 20px 0;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-evenly;
+    height: 100vh;
+    padding: 90px 5% 0 5%;
 }
 
-/* Card profile */
-
-.card-profile {
-    width: 30%;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    background-color: var(--main-color);
-    border-radius: 20px;
-}
-
-.avatar {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    background-color: white;
-}
-
-/* Card order */
-
-.card-order {
-    width: 50%;
-}
-
-.card-order h1 {
-    text-align: center;
-}
-
-@media (max-width: 1000px) {
-    .card-profile {
-        width: 40%;
-    }
-}
-
-@media (max-width: 800px) {
+@media only screen and (max-width: 1300px) {
     .container {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
+}
 
-    .card-profile {
-        width: 100%;
-        padding: 20px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        background-color: var(--main-color);
-        border-radius: 0;
-    }
-
-    .card-order {
-        width: 100%;
-        margin-top: 10px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+@media only screen and (max-width: 670px) {
+    .container {
+        margin-bottom: 10%;
+        padding: 90px 0 0 0;
     }
 }
