--- a/src/pages/DetaiProduct/DetailProduct.module.css
+++ b/src/pages/DetaiProduct/DetailProduct.module.css
@@ -1,3 +1,10 @@
 .main {
     height: 100vh;
 }
+
+@media only screen and (max-height: 400px) {
+    .main {
+        height: auto;
+        margin-bottom: 10px;
+    }
+}
