--- a/src/pages/products/Products.module.css
+++ b/src/pages/products/Products.module.css
@@ -2,12 +2,11 @@
     margin: 100px 0;
     padding: 0 5%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    flex-direction: column;
 }
 
 .products {
-    width: 80%;
+    width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -15,8 +14,62 @@
     gap: 20px;
 }
 
-.dashbroad {
-    width: 20%;
+.fillter {
+    width: 100%;
+}
+
+.fillter ul {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 2%;
+}
+
+.fillter-item {
+    width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 20px;
+    color: var(--gray-dark);
+    background-color: var(--white);
+    border: 1px solid transparent;
+    border-radius: 5px;
+}
+
+.fillter-item:hover {
+    border: 1px solid var(--gray-dark);
+}
+
+.fillter-item span {
+    font-size: var(--font-size-tag-p);
+    cursor: pointer;
+}
+
+.fillter .icon {
+    margin-left: 10px;
+    font-size: var(--font-size-tag-p);
+    cursor: pointer;
+}
+
+.menu {
+    width: 300px;
+    height: auto;
+    background-color: var(--white);
+    border: 1px solid var(--light);
+    display: flex;
+    flex-direction: column;
+}
+
+.menu-item {
+    display: inline-block;
+    padding: 10px 30px;
+}
+
+.menu-item:hover {
+    background-color: var(--gray);
+    color: var(--white);
 }
 
 @media only screen and (max-width: 1100px) {
@@ -28,5 +81,17 @@
     .products {
         margin-top: 5%;
         width: 100%;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .fillter ul {
+        padding: 5px 0;
+        overflow: scroll;
+        justify-content: flex-start;
+    }
+
+    .fillter ul::-webkit-scrollbar {
+        height: 0px;
     }
 }
