--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -4,7 +4,7 @@
     width: 100%;
     height: 70px;
     margin: 0 auto;
-    padding: 0 200px;
+    padding: 0 100px;
     background-color: var(--white);
     display: flex;
     align-items: center;
@@ -77,30 +77,13 @@
     color: var(--white);
 }
 
-@media only screen and (max-width: 1600px) {
-    .header {
-        padding: 0 150px;
-    }
-}
-
 @media only screen and (max-width: 1300px) {
     .header {
-        padding: 0 100px;
-    }
-}
-
-@media only screen and (max-width: 1200px) {
-    .header {
-        padding: 0 75px;
-    }
-}
-
-@media only screen and (max-width: 1100px) {
-    .header {
-        width: 100%;
         padding: 0 50px;
     }
+}
 
+@media only screen and (max-width: 1150px) {
     .nav {
         position: absolute;
         left: -300px;
@@ -145,5 +128,15 @@
 
     .hamburger {
         display: block;
+    }
+}
+
+@media only screen and (max-width: 550px) {
+    .header {
+        padding: 0 20px;
+    }
+
+    .logo {
+        display: none;
     }
 }
