--- a/src/components/FeaturedProduct/FeaturesProduct.module.css
+++ b/src/components/FeaturedProduct/FeaturesProduct.module.css
@@ -9,11 +9,8 @@
     gap: 20px;
 }
 
-.icon {
-    padding: 20px;
-    border-radius: 50%;
-    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
-    background-color: var(--white);
+.swiper {
+    width: 100%;
 }
 
 .product-slider-heading {
@@ -27,9 +24,11 @@
 
 .product-box {
     margin: 10px;
+    margin-bottom: 40px;
     display: flex;
     flex-direction: column;
     width: 300px;
+    height: 400px;
     padding: 15px;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
     background-color: var(--white);
