--- a/src/components/MenuProduct/MenuProduct.module.css
+++ b/src/components/MenuProduct/MenuProduct.module.css
@@ -44,6 +44,7 @@
     border: 1px solid var(--light);
     display: flex;
     flex-direction: column;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
 }
 
 .menu-item {
