--- a/src/components/DetailProductCard/DetailProductCard.module.css
+++ b/src/components/DetailProductCard/DetailProductCard.module.css
@@ -46,7 +46,14 @@
     line-height: 25px;
 }
 
+.right {
+    position: relative;
+}
+
 .right button {
+    position: absolute;
+    right: 30px;
+    bottom: 30px;
     width: 160px;
     height: 40px;
     border: none;
@@ -98,7 +105,14 @@
         align-items: center;
     }
 
-    .right p {
+    .right p,
+    .right h3 {
         text-align: center;
+    }
+
+    .right button {
+        width: 70%;
+        right: 50%;
+        transform: translateX(50%);
     }
 }
