--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -50,6 +50,8 @@
 }
 
 .nav ul li a span {
+    width: 30px;
+    text-align: center;
     position: absolute;
     top: 0px;
     background-color: red;
@@ -86,13 +88,13 @@
     color: var(--white);
 }
 
-@media only screen and (max-width: 1300px) {
+@media only screen and (max-width: 1400px) {
     .header {
-        padding: 0 50px;
+        padding: 0 20px;
     }
 }
 
-@media only screen and (max-width: 1150px) {
+@media only screen and (max-width: 1300px) {
     .nav {
         position: absolute;
         left: -300px;
