--- a/src/pages/cart/Cart.module.css
+++ b/src/pages/cart/Cart.module.css
@@ -99,6 +99,7 @@ p {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 20px;
 }
 
 .order p {
@@ -120,6 +121,19 @@ p {
     background-color: var(--gray-dark);
 }
 
+/* css select */
+.method select {
+    cursor: pointer;
+    padding: 10px;
+    font-size: 1.2rem;
+    background-color: var(--gray);
+    color: white;
+}
+
+.method .method-item {
+    height: 30px;
+}
+
 @media only screen and (max-width: 1100px) {
     .container {
         margin: 80px 0 10px;
@@ -139,4 +153,8 @@ p {
         margin-bottom: 5px;
         font-size: 1.2rem;
     }
+}
+
+/* css order box */
+.order-box {
 }
