order css and cart css

--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -110,6 +110,16 @@
     }
 }
 
+@media only screen and (max-width: 500px) {
+    .container {
+        width: 300px;
+    }
+
+    .box-items {
+        width: 100%;
+    }
+}
+
 /* Fix for height device */
 @media only screen and (max-height: 500px) {
     .container {
