--- a/src/pages/cart/Cart.module.css
+++ b/src/pages/cart/Cart.module.css
@@ -7,154 +7,196 @@
     align-items: center;
 }
 
-p {
-    font-size: var(--font-size-tag-p);
-    color: var(--gray);
-}
-
-.container .heading {
-    width: 100%;
-    font-size: 4rem;
-    font-weight: 300;
-    text-align: left;
-    color: var(--gray);
-    border-bottom: 1px solid var(--gray);
-}
-
-.box {
-    margin-top: 20px;
-    width: 100%;
-}
-
-.box-item {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-    margin-bottom: 10px;
-}
-
-.box-item-left {
-    width: 20%;
-}
-
-.box-item-left img {
-    width: 100%;
-}
-
-.box-item-right {
-    width: 70%;
-}
-
-.box-item-right h2 {
-    font-weight: 300;
+h1 {
     color: var(--gray-dark);
-    margin-bottom: 5px;
 }
 
-/* css button - + */
-.quantity {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-}
-
-.quantity button {
-    padding: 5px;
-    height: auto;
-    cursor: pointer;
-    text-align: center;
-    font-size: 1.2rem;
-    color: var(--gray);
-    background-color: transparent;
-    border: none;
-}
-
-.quantity button:hover {
-    background-color: var(--gray-dark);
-    color: var(--white);
-}
-
-/* css button delete */
-.delete {
-    width: 10%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.delete button {
-    cursor: pointer;
-    color: var(--gray);
-    font-size: 1.3rem;
-    background-color: transparent;
-    border: none;
-}
-
-/* css order */
-.order {
-    padding: 5px;
-    margin-top: 10px;
-    border-top: 1px solid var(--gray-dark);
+/* cart */
+.cart {
     width: 100%;
+}
+
+.cart-flex {
+    width: 75%;
+    display: flex;
+    gap: 10px;
+}
+
+.cart-item {
+    margin-bottom: 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 20px;
 }
 
-.order p {
-    font-size: 2rem;
+.cart-item img {
+    width: 20%;
 }
 
-.order button {
+.cart-item .cart-info {
+    width: 80%;
+    line-height: 30px;
+}
+
+.cart-item .cart-info h3 {
+    margin-bottom: 5px;
+    font-size: var(--font-size-heading-three);
+    color: var(--gray-dark);
+}
+
+.cart-item .cart-info p {
+    font-size: var(--font-size-tag-p);
+    color: var(--gray-dark);
+}
+
+/* cart action */
+.cart-action {
+    width: 25%;
+    gap: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.cart-item .cart-button {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.cart-item .cart-button p {
+    font-size: var(--font-size-tag-p);
+    color: var(--gray-dark);
+}
+
+.cart-item .cart-button button {
+    padding: 5px;
+    font-size: var(--font-size-tag-p);
+    color: var(--gray-dark);
+    background-color: transparent;
+    border: 1px solid var(--gray-dark);
     cursor: pointer;
-    width: 100px;
-    padding: 10px;
-    font-size: 1.2rem;
-    color: var(--white);
-    background-color: var(--gray);
-    border: none;
 }
 
-.order button:hover {
+.cart-item .cart-button button:hover {
     color: var(--white);
     background-color: var(--gray-dark);
 }
 
-/* css select */
-.method select {
-    cursor: pointer;
-    padding: 10px;
-    font-size: 1.2rem;
-    background-color: var(--gray);
-    color: white;
+.cart-item .cart-delete {
+    width: 50%;
 }
 
-.method .method-item {
-    height: 30px;
+.cart-item .cart-delete button {
+    padding: 5px;
+    width: 100%;
+    font-size: var(--font-size-tag-p);
+    color: var(--gray-dark);
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+.cart-item .cart-delete button:hover {
+    color: var(--white);
+    background-color: var(--gray-dark);
+}
+
+/* empty cart */
+.empty-cart {
+    display: flex;
+    padding: 10px;
+    flex-direction: column;
+    align-items: center;
+}
+
+.empty-cart img {
+    width: 70%;
+}
+
+.empty-cart button {
+    padding: 15px 30px;
+    font-size: 1.4rem;
+    color: var(--white);
+    background-color: var(--gray);
+    cursor: pointer;
+    border: none;
+    border-radius: 20px;
+}
+
+.empty-cart button:hover {
+    background-color: var(--gray-dark);
 }
 
 @media only screen and (max-width: 1100px) {
     .container {
         margin: 80px 0 10px;
     }
+}
 
-    .container .heading {
-        font-size: 2rem;
+@media only screen and (max-width: 900px) {
+    .cart-item .cart-info {
+        line-height: 20px;
     }
 
-    .order {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
+    .cart-item .cart-info h3 {
+        font-size: calc(var(--font-size-heading-three) - 0.2rem);
     }
 
-    .order p {
-        margin-bottom: 5px;
-        font-size: 1.2rem;
+    .cart-item .cart-info p,
+    .cart-item .cart-button button {
+        font-size: calc(var(--font-size-tag-p) - 0.2rem);
+    }
+
+    .cart-item .cart-delete button {
+        width: 100%;
+        font-size: var(--font-size-tag-p);
     }
 }
 
-/* css order box */
-.order-box {
+@media only screen and (max-width: 700px) {
+    .cart {
+        margin-top: 50px;
+    }
+
+    .cart-item {
+        flex-direction: column;
+        align-items: normal;
+        padding-bottom: 10px;
+        border-bottom: 1px solid var(--gray);
+    }
+
+    .cart-item:first-child {
+        padding-top: 10px;
+        border-top: 1px solid var(--gray);
+    }
+
+    .cart-flex {
+        width: 100%;
+    }
+
+    .cart-flex img {
+        width: 30%;
+    }
+
+    .cart-flex .cart-info {
+        width: 70%;
+    }
+
+    .cart-action {
+        width: 100%;
+    }
+
+    .cart-action .cart-button,
+    .cart-action .cart-delete {
+        width: 25%;
+    }
+
+    .cart-item .cart-info p,
+    .cart-item .cart-info h3 {
+        font-size: calc(var(--font-size-heading-three) - 0.4rem);
+    }
 }
