--- a/src/components/ProfileCard/ProfileCard.module.css
+++ b/src/components/ProfileCard/ProfileCard.module.css
@@ -1,130 +1,77 @@
-.wrapper {
-    width: 40%;
+.card {
+    position: relative;
+    margin-top: 100px;
+    width: 400px;
+    height: 420px;
     display: flex;
-    box-shadow: 0 1px 20px 0 rgba(0, 0, 0, 0.09);
-    transition: 0.2s;
+    flex-direction: column;
+    background-color: var(--white);
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
 }
 
-.wrapper .left {
-    width: 35%;
-    background-color: var(--light);
-    padding: 30px 25px;
-    text-align: center;
-    transition: 0.2s;
+.card button {
+    position: absolute;
+    bottom: 20px;
+    transform: translateX(50%);
+    width: 50%;
+    padding: 10px;
+    font-size: var(--font-size-tag-p);
+    color: var(--white);
+    background-color: var(--gray);
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
 }
 
-.wrapper .left .image {
+.card button:hover {
+    background-color: var(--gray-dark);
+}
+
+.card .card-image {
     width: 100%;
-    height: 200px;
-    margin-bottom: 10px;
-    background-image: url('https://cdn-img.thethao247.vn/upload/nguyetdt/2020/02/12/han-sara-3.JPG');
-    background-position: center;
-    background-size: cover;
-    transition: 0.2s;
+    height: 150px;
+    position: relative;
 }
 
-.wrapper .left h4 {
-    margin-bottom: 7px;
-    font-size: var(--font-size-heading-four);
+.card .card-image img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    border: 4px solid var(--white);
+    object-fit: cover;
+    position: absolute;
+    top: -50%;
+    transform: translateX(50%);
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
+}
+
+.card .card-info {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.card .card-info h2,
+.card .card-info h3 {
     color: var(--gray-dark);
 }
 
-.wrapper .left p {
+.card .card-info p {
+    color: var(--gray);
     font-size: var(--font-size-tag-p);
-    color: var(--gray);
 }
 
-.wrapper .right {
-    width: 65%;
-    background-color: var(--light);
-    padding: 30px 25px;
-    transition: 0.2s;
-}
-
-.wrapper .right .info,
-.wrapper .right .projects {
-    margin-bottom: 25px;
-}
-
-.wrapper .right .info h3,
-.wrapper .right .projects h3 {
-    font-size: var(--font-size-heading-four);
-    color: var(--gray);
-    margin-bottom: 10px;
-    padding-bottom: 5px;
-    border-bottom: 1px solid var(--blue);
-    text-transform: uppercase;
-    letter-spacing: 5px;
-}
-
-.wrapper .right .info-data,
-.wrapper .right .projects-data {
+.card-info-order {
+    width: 100%;
+    margin-top: 30px;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
 }
 
-.wrapper .right .info-data .data,
-.wrapper .right .projects-data .data {
+.card-info-order .left,
+.card-info-order .right {
     width: 50%;
-}
-
-.wrapper .right .info-data .data h4,
-.wrapper .right .projects-data .data h4 {
-    color: var(--gray-dark);
-}
-
-.wrapper .right .info-data .data p,
-.wrapper .right .projects-data .data p {
-    color: var(--gray);
-}
-
-@media only screen and (max-width: 1300px) {
-    .wrapper {
-        width: 80%;
-    }
-}
-
-@media only screen and (max-width: 1100px) {
-    .wrapper {
-        width: 70%;
-    }
-}
-
-@media only screen and (max-width: 1000px) {
-    .wrapper {
-        width: 100%;
-    }
-}
-
-@media only screen and (max-width: 670px) {
-    .wrapper {
-        width: 100%;
-    }
-
-    .wrapper .left {
-        width: 50%;
-        padding: 20px 15px;
-    }
-
-    .wrapper .right {
-        width: 50%;
-        padding: 20px 15px;
-    }
-
-    .wrapper .left h4 {
-        margin-bottom: 7px;
-        font-size: calc(var(--font-size-heading-three) - 0.3rem);
-        color: var(--gray-dark);
-    }
-
-    .wrapper .left p {
-        font-size: calc(var(--font-size-tag-p) - 0.3rem);
-        color: var(--gray);
-    }
-
-    .wrapper .right .info-data,
-    .wrapper .right .projects-data {
-        display: block;
-    }
 }
