--- a/src/components/ProfileCard/ProfileCard.module.css
+++ b/src/components/ProfileCard/ProfileCard.module.css
@@ -75,3 +75,14 @@
 .card-info-order .right {
     width: 50%;
 }
+
+@media only screen and (max-width: 500px) {
+    .card {
+        width: 350px;
+    }
+
+    .card .card-image img {
+        width: 185px;
+        height: 185px;
+    }
+}
