--- a/src/pages/profile/Profile.module.css
+++ b/src/pages/profile/Profile.module.css
@@ -1,6 +1,7 @@
 .container {
-    height: 100vh;
     padding: 90px 5% 0 5%;
+    display: flex;
+    gap: 20px;
 }
 
 @media only screen and (max-width: 1300px) {
