--- a/src/pages/profile/Profile.module.css
+++ b/src/pages/profile/Profile.module.css
@@ -1,6 +1,20 @@
 .container {
-    padding: 90px 5% 0 5%;
+    width: 100%;
+    padding: 90px 0 0 0;
     display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 100px;
+}
+
+.orders {
+    width: 60%;
+}
+
+.order {
+    width: 100%;
+    margin-top: 60px;
+    display: flex;
+    flex-direction: column;
     gap: 20px;
 }
 
@@ -9,6 +23,15 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        gap: 40px;
+    }
+
+    .orders {
+        width: 90%;
+    }
+
+    .order {
+        margin-top: 40px;
     }
 }
 
