update and fix order local storage

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
     --success: #28a745;
     --info: #17a2b8;
     --warning: #ffc107;
-    --danger: #dc3545;
+    --danger: #ff0000c4;
 
     /* font size*/
     --font-size-header-logo: 1.6rem;
