--- a/src/components/OrderCard/OrderCard.module.css
+++ b/src/components/OrderCard/OrderCard.module.css
@@ -16,7 +16,7 @@
 }
 
 .info-order .info-order-action {
-    width: 20%;
+    width: 240px;
 }
 
 .info-order .info-order-action p {
@@ -38,6 +38,15 @@
     border-radius: 10px;
     padding: 10px 20px;
     font-size: var(--font-size-tag-p);
+    cursor: pointer;
+}
+
+.info-order button:hover {
+    background-color: var(--danger);
+}
+
+.info-order button:disabled {
+    background-color: var(--secondary);
 }
 
 .action-sort {
@@ -61,7 +70,7 @@
     }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 600px) {
     .table-heading,
     .table-body {
         font-size: calc(var(--font-size-tag-p) - 0.3rem);
