--- a/src/pages/register/Register.module.css
+++ b/src/pages/register/Register.module.css
@@ -1,8 +1,7 @@
 .container {
-    margin: auto;
+    margin: 100px 0;
     display: grid;
     place-items: center;
-    height: 100vh;
     background-color: transparent;
 }
 
@@ -77,9 +76,17 @@
     gap: 10px;
 }
 
+/* select */
+.select {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
 @media only screen and (max-height: 900px) {
     .container {
-        margin-top: 50px;
+        margin-top: 150px;
         margin-bottom: 50px;
     }
 }
