--- a/src/components/product/Product.module.css
+++ b/src/components/product/Product.module.css
@@ -2,13 +2,22 @@
     position: relative;
     background-color: var(--white);
     width: 300px;
-    height: 500px;
+    height: 450px;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
-    padding: 20px 20px 40px;
-    border-radius: 10px;
+    gap: 30px;
     transition: 0.2s;
+}
+
+.product .sale {
+    padding: 5px 20px;
+    font-size: 1.2rem;
+    color: var(--white);
+    background-color: var(--red);
+    top: 0;
+    left: 0;
+    position: absolute;
 }
 
 .image {
@@ -23,40 +32,40 @@
     height: 100%;
 }
 
-.name-price {
-    margin-top: 20px;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-}
-
-.name a {
-    font-weight: 300;
-    font-size: var(--font-size-heading-three);
-    text-transform: capitalize;
-    color: var(--gray-dark);
-}
-
 .information {
-    height: 100%;
+    height: 40%;
+    padding: 20px 20px 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.information a {
+    text-align: center;
+    color: var(--gray-dark);
+    font-size: 1.4rem;
+    font-weight: 600;
 }
 
 .information span {
-    font-weight: 600;
-    font-size: 1.4rem;
     color: var(--red);
+    font-size: 1.2rem;
+    text-decoration: line-through;
 }
 
-.product p {
-    font-size: 1.2rem;
-    text-transform: capitalize;
-    color: var(--gray);
+.information .price-sale {
+    font-size: 1.6rem;
+    font-weight: 600;
+    margin-top: 10px;
+    text-decoration: none;
 }
 
 .buy {
     position: absolute;
-    bottom: 20px;
-    right: 20px;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: all 0.2s;
 }
 
 .buy button {
@@ -66,6 +75,10 @@
     color: var(--white);
     font-size: 1.2rem;
     cursor: pointer;
+}
+
+.buy:hover {
+    bottom: 20px;
 }
 
 .buy button:hover {
