fix css menu product

--- a/src/components/ProductMenu/MenuProduct.module.css
+++ b/src/components/ProductMenu/MenuProduct.module.css
@@ -1,11 +1,10 @@
 .filter {
     width: 100%;
     font-size: 1.2rem;
-    padding: 20px 10px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
     gap: 10px;
     background-color: var(--white);
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
 }
