--- a/src/components/Order/Order.module.css
+++ b/src/components/Order/Order.module.css
@@ -89,6 +89,23 @@
     background-color: var(--gray-dark);
 }
 
+.order .action .coupon {
+    margin: 68px 0 10px;
+}
+
+.order .action .coupon input {
+    width: 100%;
+    outline: none;
+    font-size: 1.2rem;
+    padding: 5px;
+    border-radius: 4px;
+    border: 0.5px solid hsl(0, 0%, 80%);
+}
+
+.order .action .coupon input:focus {
+    outline: 2.5px solid var(--blue);
+}
+
 /* css address */
 .address {
     width: 100%;
