update css search box

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -193,7 +193,8 @@ header {
 
 .search__box--container--header--icon {
     padding: 5px;
-    font-size: 28px;
+    font-size: 22px;
+    color: #939393;
     cursor: pointer;
 }
 
