--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -1,146 +1,97 @@
 .container {
-    width: 500px;
-    height: 40px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    margin-top: 100px;
+    width: 100%;
     position: relative;
-    transition: 0.2s;
+    height: 30px;
 }
 
 .container input {
     width: 100%;
-    height: 100%;
-    padding: 0 45px 0 15px;
-    font-size: var(--font-size-tag-p);
+    height: 30px;
+    padding: 10px 40px 10px 0;
     outline: none;
-    border-radius: 20px;
-    border: 1px solid var(--gray);
-}
-
-.container input:focus {
-    border: 2px solid var(--gray);
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 1px solid #939393;
+    font-size: 18px;
 }
 
 .container span {
-    font-size: 1.3rem;
-    color: var(--gray);
     position: absolute;
-    right: 20px;
+    right: 3px;
+    color: #939393;
+    font-size: 18px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 /* BOX ITEM SEARCH */
-.box-items {
-    width: 500px;
-    max-height: 400px;
-    position: relative;
-    background-color: var(--white);
-    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
-    overflow: scroll;
-    display: flex;
-    flex-direction: column;
+.box {
+    width: 100%;
 }
 
-.box-items::-webkit-scrollbar {
-    display: none;
-}
-
-.box-items h2 {
-    color: var(--gray);
-    font-size: 1.3rem;
+.box h2 {
+    margin: 5px 0;
+    padding: 2px 5px;
+    font-size: 18px;
+    background-color: #f5f5f5;
     font-weight: 300;
-    width: 100%;
-    position: fixed;
-    padding: 2px 20px;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
-    background-color: var(--light);
+    color: #666;
 }
 
-.box-items ul {
+.box--container {
+    width: 100%;
+    height: 70vh;
     display: flex;
     flex-direction: column;
-    padding: 30px 20px 5px 20px;
+    overflow: scroll;
 }
 
-.item-search {
+.box--container::-webkit-scrollbar {
+    width: 0;
+}
+
+.box__item {
     width: 100%;
-    display: flex;
     padding: 10px 0;
-    border-bottom: 1px solid var(--gray);
+    display: flex;
     gap: 20px;
+    border-bottom: 1px solid #939393;
 }
 
-.item-search:last-child {
-    border-bottom: none;
-    margin-bottom: 10px;
+.box__item--left img {
+    height: 70px;
 }
 
-.item-search .left img {
-    width: 75px;
-    height: 50px;
+.box__item--right {
+    line-height: 20px;
 }
 
-.item-search .right .name {
-    display: block;
-    margin: 0;
-    padding: 0;
-    color: var(--gray);
-    font-size: var(--font-size-header-a);
-    font-weight: calc(var(--font-weight-tag-a) + 300);
-    transition: 0.2s;
-    border-radius: 0;
+.box__item--right--name {
+    color: #000;
+    font-size: 16px;
 }
 
-.item-search .right .name:hover {
-    background-color: transparent;
-    color: var(--gray-dark);
+.box__item--right--price--price {
+    font-weight: 600;
 }
 
-.item-search .right .price {
-    font-size: 1.2rem;
-    color: var(--gray);
-}
-
-.box-items .product-not-found {
-    width: 100%;
-    height: 450px;
-    display: grid;
-    place-items: center;
-    color: var(--gray);
-    font-size: 1.4rem;
-}
-
-/* Responsive */
-
-@media only screen and (max-width: 1550px) {
-    .container {
-        width: 400px;
-    }
-
-    .box-items {
-        width: 400px;
-    }
+.box__item--right--price--sale {
+    margin-left: 5px;
+    font-size: 14px;
+    text-decoration: line-through;
+    font-weight: 300;
 }
 
 @media only screen and (max-width: 500px) {
     .container {
-        width: 300px;
-    }
-
-    .box-items {
-        width: 100%;
+        margin-top: 50px;
     }
 }
 
-/* Fix for height device */
 @media only screen and (max-height: 500px) {
     .container {
-        width: 400px;
-    }
-
-    .box-items {
-        width: 400px;
+        margin-top: 0;
     }
 }
