--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@
     padding: 0;
     list-style: none;
     text-decoration: none;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 }
 
